--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "swr": "^2.1.2",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3"
   }
 }
