--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "clsx": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
+    "formik": "^2.2.9",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "swr": "^2.1.2",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3"
